-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.2
-
None
-
-
655e8623afed01de63ce43f55227fb019e800fe9 (qt/qtbase/5.12.2)
I just tried my application with a build of the current 5.12 branch (yesterday), and I see that a QSplashscreen is now positioned at the top left corner on an Android instead of the center of the Window. This is a regression from Qt 5.12.1!
QPixmap pixmap(":/qt144.png"); QSplashScreen* splash = new QSplashScreen(pixmap, Qt::WindowStaysOnTopHint | Qt::SplashScreen);
Looking through the changes since Qt 5.12.1, this seems to be a regression coming from https://codereview.qt-project.org/#/c/249238/ .
See the attached project for a minimum example.
Expected behaviour:
See a splash screen with Qt image in the center of the screen on an android device.
Behaviour in my Qt build ( ef7908d90cd4acfd3dc9ddeb5dca4e9d53dde9d8 ):
Splash screen with Qt image is on the top left corner of the screen on an android device.
- resulted from
-
QTBUG-72819 SplashScreen shown on wrong monitor, scaling is incorrect
-
- Closed
-
For Gerrit Dashboard: QTBUG-73794 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
253323,4 | Fix QSplashscreen positioning on Android | 5.12.2 | qt/qtbase | Status: MERGED | -2 | 0 |