Fix QSplashscreen positioning on Android

Android does not use QPlatformWindow::initialGeometry(),
so the underlying assumption of 56e92dfdf255231aff0034d2e197fd096da7f0c0
was wrong. Try to explicitly find a screen and default to primary.

Fixes: QTBUG-73794
Change-Id: Iba3e70657a60babfcedf751335ca55cb971a4f99
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>